--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,9 +1,7 @@
-# code: language=yaml tabSize=2
-# Copyright (c) 2025, Alexei Znamensky
-# All rights reserved.
-#
-# This file is part of the Andebox project and is distributed under the terms
-# of the BSD 3-Clause License. See LICENSE file for details.
+# (C) 2025 Alexei Znamensky
+# Licensed under the MIT License. See LICENSES/MIT.txt for details.
+# SPDX-FileCopyrightText: 2025 Alexei Znamensky
+# SPDX-License-Identifier: MIT
 
 version: 2
 
