--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ pytest-skip-slow = "^0.0.5"
 sphinx = "^8.2.3"
 furo = "^2024.8.6"
 myst-parser = "^4.0.1"
+pexpect = "^4.9.0"
 
 [build-system]
 requires = ["poetry-core"]
