refactor: move definition of `__version__` to `andebox/__init.py__`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,8 +79,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
 version_variables = [
-    "andebox/cli.py:__version__",
-    "docs/conf.py:release"
+    "andebox/__init__.py:__version__",
 ]
 version_toml = [
     "pyproject.toml:tool.poetry.version",
