--- a/.cz.toml
+++ b/.cz.toml
@@ -5,8 +5,7 @@ tag_format = "v$version"
 bump_message = "bump: release $current_version → $new_version"
 version_files = [
     "pyproject.toml:version",
-    "andebox/cli.py:__version__",
-    "docs/conf.py:release"
+    "andebox/__init__.py:__version__",
 ]
 update_changelog_on_bump = true
 major_version_zero = true
