chore(tox): update tox action `docs` to install the namesake group in the poetry venv

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ commands =
 [testenv:docs]
 deps = poetry
 commands =
-    poetry install
+    poetry install --with docs
     /bin/rm -rf build/ dist/ docs/_build
     poetry run sphinx-build -b html docs docs/_build/html
 
