--- a/.github/workflows/ci-slow-tests.yml
+++ b/.github/workflows/ci-slow-tests.yml
@@ -37,7 +37,7 @@ jobs:
         run: poetry install --with dev,docs
 
       - name: Run all tests including slow
-        run: poetry run pytest -v --slow
+        run: poetry run pytest -v --cov --slow
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
