--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -39,7 +39,7 @@ jobs:
         run: poetry run flake8 -v . --count --show-source --statistics
 
       - name: Run tests
-        run: poetry run pytest -v --cov-branch
+        run: poetry run pytest -v --cov --cov-branch
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
