--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,6 @@ flake8 = ">=6,<8"
 gitpython = ">=3.1.44"
 pre-commit = "^4.2.0"
 python-semantic-release = ">=9.21.1,<11.0.0"
-commitizen = "^4.8.0"
 pytest-cov = "^6.1.1"
 junit-xml = "^1.9"
 pytest-skip-slow = "^0.0.5"
@@ -81,8 +80,7 @@ version_variables = [
     "andebox/__init__.py:__version__",
 ]
 version_toml = [
-    "pyproject.toml:tool.poetry.version",
-    ".cz.toml:tool.commitizen.version"
+    "pyproject.toml:tool.poetry.version"
 ]
 branch = "main"
 changelog = { file = "CHANGELOG.md", mode = "init" }
