--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -29,8 +29,9 @@ jobs:
 
       - name: Install Poetry
         run: |
-          poetry lock
+          python -m pip install --upgrade pip
           pip install poetry
+          poetry lock
 
       - name: Install all dependencies (including dev)
         run: poetry install --with dev
