--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,11 +64,11 @@ pytest-cov = "^6.1.1"
 junit-xml = "^1.9"
 pytest-skip-slow = "^0.0.5"
 sphinx = "^8.2.3"
+asciinwriter = "^0.2.2"
 
 [tool.poetry.group.docs.dependencies]
 furo = "^2024.8.6"
 myst-parser = "^4.0.1"
-pexpect = "^4.9.0"
 
 [build-system]
 requires = ["poetry-core"]
