--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,72 +10,113 @@ permissions: {}  # remove top-level permissions
 on:
   workflow_dispatch:
   push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
     branches: [main]
 
 jobs:
-  release:
+  test:
     runs-on: ubuntu-latest
-    concurrency: release
-    permissions:
-      contents: write
-      issues: write
-      pull-requests: write
-      id-token: write
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        ref: ${{ github.head_ref || github.ref_name }}
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref || github.ref_name }}
 
-    - name: Python setup
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Python setup
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --with dev
 
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Run linter and tests
+        env:
+          PYTHONPATH: .
+        run: |
+          poetry run flake8 -v . --count --show-source --statistics
+          poetry run pytest -v --cov
 
-    - name: Create build environment
-      run: |
-        poetry lock
-        poetry install --verbose --with dev
-        if ! git diff --quiet poetry.lock; then
-          git add poetry.lock
-          git commit -m "chore: update poetry.lock"
-          git push
-        fi
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
-    - name: Run linter and tests
-      env:
-        PYTHONPATH: .
-      run: |
-        poetry run flake8 -v . --count --show-source --statistics
-        poetry run pytest -v --cov
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        verbose: true
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      contents: write
 
-    - name: Create Release
-      env:
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-      run: |
-        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose version
-        GH_TOKEN=${{ github.token }} poetry run semantic-release --verbose publish
-        if [ -d dist ] && [ "$(ls -A dist)" ]; then
-          poetry publish --no-interaction
-        else
-          echo "No build artifacts to publish."
-        fi
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: ${{ github.head_ref || github.ref_name }}
+
+      - name: Python setup
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --with dev
+
+      - name: Create Release
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          poetry run semantic-release --verbose version
+          poetry run semantic-release --verbose publish
+
+      - name: Check if dist folder has content
+        id: check_dist
+        run: |
+          if [ -d dist ] && [ "$(ls -A dist)" ]; then
+            echo "has_content=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_content=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Store the distribution packages
+        uses: actions/upload-artifact@v4
+        if: ${{ steps.check_dist.outputs.has_content == 'true' }}
+        with:
+          name: andebox-distributions
+          path: dist/
+    outputs:
+      has_content: ${{ steps.check_dist.outputs.has_content }}
+
+  publish-to-pypi:
+    needs:
+      - build
+    if: ${{ needs.build.outputs.has_content == 'true' }}
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/andebox
+    permissions:
+      id-token: write  # IMPORTANT: mandatory for trusted publishing
+
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v4
+        with:
+          name: andebox-distributions
+          path: dist/
+      - name: Publish distribution 📦 to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
