chore: adjust tox deps action to conventional commits

--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ commands =
     poetry update
     poetry lock
     git add poetry.lock
-    git commit -m 'Update project dependencies'
+    git commit -m 'chore(deps): update project dependencies'
     git push
 
 [testenv:test-release]
