chore: run tests when updating dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ allowlist_externals =
 commands =
     poetry update
     poetry lock
+    {[testenv]commands}
     git add poetry.lock
     git commit -m 'chore(deps): update project dependencies'
     git push
