--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Topic :: Software Development :: Testing",
     "Topic :: Utilities"
 ]
@@ -41,34 +42,34 @@ andebox = "andebox.cli:run"
 [tool.poetry.dependencies]
 python = "^3.11"
 ansible-core = [
-    { version = "^2.17.4", python = ">=3.12" },
+    { version = ">=2.17.4", python = ">=3.12" },
     { version = "^2.15.0", python = ">=3.11,<3.12" },
 ]
 pyyaml = ">=5.4"
-python-vagrant = "^1.0.0"
-fabric = "^3.1.0"
-tox = "^4.5.2"
+python-vagrant = ">=1.0.0"
+fabric = ">=3.1.0"
+tox = ">=4.5.2"
 ruamel-yaml = ">=0.18.6,!=0.18.13,!=0.18.14"
-argcomplete = "^3.5.3"
-antsibull-docs = "^2.16.3"
+argcomplete = ">=3.5.3"
+antsibull-docs = ">=2.16.3"
 
 [tool.poetry.group.dev.dependencies]
-pytest = ">=7.3.1,<10.0.0"
-pytest-mock = "^3.10.0"
-pylint = ">=2.17.4,<5.0.0"
-flake8 = ">=6,<8"
+pytest = ">=7.3.1"
+pytest-mock = ">=3.10.0"
+pylint = ">=2.17.4"
+flake8 = ">=6"
 gitpython = ">=3.1.44"
-pre-commit = "^4.2.0"
-python-semantic-release = ">=9.21.1,<11.0.0"
-pytest-cov = ">=6.1.1,<8.0.0"
-junit-xml = "^1.9"
-pytest-skip-slow = "^0.0.5"
-sphinx = "^8.2.3"
-asciinwriter = "^0.2.2"
+pre-commit = ">=4.2.0"
+python-semantic-release = ">=9.21.1"
+pytest-cov = ">=6.1.1"
+junit-xml = ">=1.9"
+pytest-skip-slow = ">=0.0.5"
+sphinx = ">=8.2.3"
+asciinwriter = ">=0.2.2"
 
 [tool.poetry.group.docs.dependencies]
-furo = ">=2024.8.6,<2026.0.0"
-myst-parser = "^4.0.1"
+furo = ">=2024.8.6"
+myst-parser = ">=4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
