--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -16,8 +16,38 @@ on:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12", "3.13", "3.14"]
+        ansible:
+          - stable-2.17
+          - stable-2.18
+          - stable-2.19
+          - stable-2.20
+          - devel
+        python:
+          - "3.11"
+          - "3.12"
+          - "3.13"
+          - "3.14"
+        exclude:
+          # ansible-core 2.17 doesn't support Python 3.13+
+          - ansible: stable-2.17
+            python: "3.13"
+          - ansible: stable-2.17
+            python: "3.14"
+          # ansible-core 2.18 doesn't support Python 3.14
+          - ansible: stable-2.18
+            python: "3.14"
+          # ansible-core 2.19 doesn't support Python 3.14
+          - ansible: stable-2.19
+            python: "3.14"
+          # ansible-core 2.20 doesn't support Python 3.11
+          - ansible: stable-2.20
+            python: "3.11"
+          # ansible-core 2.21 (devel) doesn't support Python 3.11
+          - ansible: devel
+            python: "3.11"
+
     runs-on: ubuntu-latest
 
     steps:
@@ -25,9 +55,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ matrix.python }}
 
-      - name: Install Poetry
+      - name: Install ansible-core (${{ matrix.ansible }})
+        run: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
+
+      - name: Install tox
         run: |
           python -m pip install --upgrade pip
           pip install poetry
