--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -58,14 +58,14 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-      - name: Install ansible-core (${{ matrix.ansible }})
-        run: pip install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
-
-      - name: Install tox
+      - name: Install poetry
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry lock
+
+      - name: Install ansible-core (${{ matrix.ansible }})
+        run: poetry install https://github.com/ansible/ansible/archive/${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
       - name: Install all dependencies (including dev)
         run: poetry install --with dev
